Stretch goals completed

--- a/style.css
+++ b/style.css
@@ -11,3 +11,20 @@
 .user {
     font-size: 18px;
 }
+
+.image-container {
+    z-index: 0;
+}
+
+.image-container:hover{
+    z-index: 10;
+    transform: scale(1.15);
+    transform-origin: center;
+    transition: all 500ms cubic-bezier(0.57, 0.21, 0.69, 3.25);
+}
+
+.image-container:hover .image-title, .image-container:hover .user {
+    transform: scale(.87);
+    transform-origin: center;
+    transition: all 500ms cubic-bezier(0.57, 0.21, 0.69, 3.25);
+}
